# mseg

./: CMakeLists.txt  LICENSE.txt  README.txt  libmseg.cpp  libmseg.h  msegcli.cpp  msegcli_edge.cpp  msegcli_edge_svm.cpp  msegcli_svm.cpp  msegcli_tex.cpp  msegcore.cpp  msegcore.h  msegfast.cpp  msegfast.h  msegfastedge.cpp  msegfastedge.h  msegfastest.cpp  msegfastest.h  msegio.cpp  msegio.h  msegslow.cpp  msegslow.h  msegstd.cpp  msegstd.h  obia-class-export-svm.cpp  obia-utils-confmatrix.cpp
CMake/: FindFreeImage.cmake  FindTinyXML.cmake
etc/: LevelParam.txt  WeightsList.txt  msegsvm.sh  runmseg.sh  runmsegedge.sh
