CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(MSEG)

ADD_LIBRARY(mseg SHARED libmseg.cpp)

ADD_EXECUTABLE(msegcli msegcli.cpp)

SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/CMake/")

SET(CMAKE_BUILD_TYPE "Release")

FIND_PACKAGE(FreeImage REQUIRED)
INCLUDE_DIRECTORIES(${FREEIMAGE_INCLUDE_PATH})

TARGET_LINK_LIBRARIES (msegcli mseg ${FREEIMAGE_LIBRARY})



# The version number.
SET (MSEG_VERSION_MAJOR "0")
SET (MSEG_VERSION_MINOR "5")
SET(MSEG_VERSION_PATCH "0")

#-----------------------------------------------------------------------------
# MSEG version number.
SET(MSEG_VERSION_STRING "${MSEG_VERSION_MAJOR}.${MSEG_VERSION_MINOR}.${MSEG_VERSION_PATCH}")

#IF(CMAKE_SIZEOF_VOID_P EQUAL 4)
#    SET(LIB_SUFFIX "")
#ELSE(CMAKE_SIZEOF_VOID_P EQUAL 4)
#    SET(LIB_SUFFIX 64)
#ENDIF(CMAKE_SIZEOF_VOID_P EQUAL 4)


IF(NOT LIB_SUFFIX)
  SET(LIB_SUFFIX "")
ENDIF(NOT LIB_SUFFIX)

INSTALL(FILES libmseg.h
  DESTINATION include)

INSTALL(FILES ${CMAKE_CURRENT_BINARY_DIR}/libmseg.so DESTINATION lib${LIB_SUFFIX})

INSTALL(FILES ${CMAKE_CURRENT_BINARY_DIR}/msegcli DESTINATION bin)